--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,9 @@ input {
   z-index: 10;
   color: white;
 }
+.password_container h1 {
+  margin: 10px 0;
+}
 
 .DisplayPW {
   background: white;
@@ -41,7 +44,7 @@ input {
   color: red;
   width: 250px;
   height: 25px;
-  margin: 20px;
+  margin: 10px;
   padding: 15px;
   display: flex;
   justify-content: center;
@@ -75,7 +78,7 @@ input {
 }
 
 #btn1:hover {
-  transition: 1s;
+  transition: 0.6s ease-in-out;
   background: white;
   color: black;
 }
