--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ input {
   padding: 10px;
   width: 500px;
   height: 400px;
-  border: 2px solid white;
+  border: 1px solid rgb(160, 158, 158);
   border-radius: 1rem;
   z-index: 10;
   color: white;
@@ -41,7 +41,7 @@ input {
 .DisplayPW {
   background: white;
   border: 1px solid black;
-  color: red;
+  color: grey;
   width: 250px;
   height: 25px;
   margin: 10px;
@@ -66,8 +66,8 @@ input {
 }
 
 #btn1 {
-  background: black;
-  color: white;
+  background: white;
+  color: black;
   margin: 30px;
   font-size: 18px;
   padding: 10px;
@@ -79,7 +79,7 @@ input {
 
 #btn1:hover {
   transition: 0.6s ease-in-out;
-  background: white;
+  background: rgb(233, 229, 229);
   color: black;
 }
 
@@ -187,8 +187,16 @@ img {
 @media only screen and (max-width: 400px) {
   .password_container {
     width: 350px;
+    height: 500px;
   }
   .password_container h1 {
     font-size: 24px;
+  }
+  .form_container {
+    display: flex;
+    flex-direction: column;
+  }
+  #btn1 {
+    font-size: 1rem;
   }
 }
